--- a/HieuPhamBeauty/HieuPhamBeauty/HieuPhamBeauty.csproj
+++ b/HieuPhamBeauty/HieuPhamBeauty/HieuPhamBeauty.csproj
@@ -216,9 +216,11 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Book.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_HeaderPartial.cshtml" />
+    <Content Include="Views\Shared\_DialogRegisterService.cshtml" />
+    <None Include="Views\Shared\_FooterPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
